--- a/content/resources/mit21g_501f12_hw2_24b.md
+++ b/content/resources/mit21g_501f12_hw2_24b.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains the information regarding lesson 23a reading.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-505-advanced-japanese-i-fall-2005/63d86e4ded3f0341c440ba04c1c15efd_MIT21G_501F12_hw2_24b.pdf
+file: /media/courses/21g-505-advanced-japanese-i-fall-2005/63d86e4ded3f0341c440ba04c1c15efd_MIT21G_501F12_hw2_24b.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: Lesson 23A Reading
 uid: 63d86e4d-ed3f-0341-c440-ba04c1c15efd
