--- a/content/resources/mit21g_505f05_hw1_23a.md
+++ b/content/resources/mit21g_505f05_hw1_23a.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains the information regarding lesson 23a reading.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-505-advanced-japanese-i-fall-2005/c6eec1943617d93b873519df12a5e9a2_MIT21G_505F05_hw1_23a.pdf
+file: /media/courses/21g-505-advanced-japanese-i-fall-2005/c6eec1943617d93b873519df12a5e9a2_MIT21G_505F05_hw1_23a.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: Lesson 23A Reading
 uid: c6eec194-3617-d93b-8735-19df12a5e9a2
