Sync all content

--- a/content/resources/mit21g_501f12_hw2_24b.md
+++ b/content/resources/mit21g_501f12_hw2_24b.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: eebcc707-c9ce-9858-4739-ef80ffbbccdf
 resourcetype: Document
 title: Lesson 23A Reading
 uid: 63d86e4d-ed3f-0341-c440-ba04c1c15efd
