--- a/content/resources/mit21g_501f12_hw3_25b.md
+++ b/content/resources/mit21g_501f12_hw3_25b.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: eebcc707-c9ce-9858-4739-ef80ffbbccdf
 resourcetype: Document
 title: Lesson 23A Reading
 uid: edf3ea1d-8ab9-a8ac-5d20-0cda5000c5fe
