--- a/content/resources/mit21g_501f12_hw4_26a.md
+++ b/content/resources/mit21g_501f12_hw4_26a.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: eebcc707-c9ce-9858-4739-ef80ffbbccdf
 resourcetype: Document
 title: Lesson 23A Reading
 uid: 8bebd055-b2ed-3756-e24a-0f31ebaa016c
