--- a/content/resources/mit21g_505f05_hw1_23a.md
+++ b/content/resources/mit21g_505f05_hw1_23a.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: eebcc707-c9ce-9858-4739-ef80ffbbccdf
 resourcetype: Document
 title: Lesson 23A Reading
 uid: c6eec194-3617-d93b-8735-19df12a5e9a2
