--- a/content/resources/mit21g_501f12_hw3_25b.md
+++ b/content/resources/mit21g_501f12_hw3_25b.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the information regarding lesson 23a reading.
-file: /media/courses/21g-505-advanced-japanese-i-fall-2005/edf3ea1d8ab9a8ac5d200cda5000c5fe_MIT21G_501F12_hw3_25b.pdf
+file: /courses/21g-505-advanced-japanese-i-fall-2005/edf3ea1d8ab9a8ac5d200cda5000c5fe_MIT21G_501F12_hw3_25b.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: Lesson 23A Reading
 uid: edf3ea1d-8ab9-a8ac-5d20-0cda5000c5fe
 ---
+This resource contains the information regarding lesson 23a reading.
+
