--- a/content/resources/mit21g_501f12_hw4_26a.md
+++ b/content/resources/mit21g_501f12_hw4_26a.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the information regarding lesson 23a reading.
-file: /media/courses/21g-505-advanced-japanese-i-fall-2005/8bebd055b2ed3756e24a0f31ebaa016c_MIT21G_501F12_hw4_26a.pdf
+file: /courses/21g-505-advanced-japanese-i-fall-2005/8bebd055b2ed3756e24a0f31ebaa016c_MIT21G_501F12_hw4_26a.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: Lesson 23A Reading
 uid: 8bebd055-b2ed-3756-e24a-0f31ebaa016c
 ---
+This resource contains the information regarding lesson 23a reading.
+
