--- a/content/resources/mit21g_505f05_hw1_23a.md
+++ b/content/resources/mit21g_505f05_hw1_23a.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the information regarding lesson 23a reading.
-file: /media/courses/21g-505-advanced-japanese-i-fall-2005/c6eec1943617d93b873519df12a5e9a2_MIT21G_505F05_hw1_23a.pdf
+file: /courses/21g-505-advanced-japanese-i-fall-2005/c6eec1943617d93b873519df12a5e9a2_MIT21G_505F05_hw1_23a.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: Lesson 23A Reading
 uid: c6eec194-3617-d93b-8735-19df12a5e9a2
 ---
+This resource contains the information regarding lesson 23a reading.
+
