Sync all content

--- a/content/resources/21g-505f05.md
+++ b/content/resources/21g-505f05.md
@@ -15,10 +15,10 @@ image_metadata:
   image-alt: A woodblock print of the Sanno festival procession at Kojimachi I-chome,
     1857.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21g-505f05.jpg
 uid: 8ec2621e-f9da-8877-043d-e02bc776bf2a
 ---
 Sanno festival procession at Kojimachi I-chome, 1857. From "One Hundred Famous Views of Edo"; Woodblock print, 13 1/4 x 8 5/8 in; The Brooklyn Museum. Photographs by Mark Harden and Carol Gerten-Jackson. Image is taken from WebMuseum Web site.
-
