--- a/content/resources/21g-505f05-th.md
+++ b/content/resources/21g-505f05-th.md
@@ -15,10 +15,10 @@ image_metadata:
   image-alt: A woodblock print of the Sanno festival procession at Kojimachi I-chome,
     1857.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21g-505f05-th.jpg
 uid: df899d91-cf73-3609-66e9-f274dad0b79c
 ---
 Sanno festival procession at Kojimachi I-chome, 1857. From "One Hundred Famous Views of Edo"; Woodblock print, 13 1/4 x 8 5/8 in; The Brooklyn Museum. Photographs by Mark Harden and Carol Gerten-Jackson. Image is taken from WebMuseum Web site.
-
