--- a/content/resources/mit21g_501f12_hw2_24b.md
+++ b/content/resources/mit21g_501f12_hw2_24b.md
@@ -5,6 +5,7 @@ file: /courses/21g-505-advanced-japanese-i-fall-2005/63d86e4ded3f0341c440ba04c1c
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: Lesson 23A Reading
 uid: 63d86e4d-ed3f-0341-c440-ba04c1c15efd
 ---
 This resource contains the information regarding lesson 23a reading.
-
