--- a/content/resources/mit21g_501f12_hw3_25b.md
+++ b/content/resources/mit21g_501f12_hw3_25b.md
@@ -5,6 +5,7 @@ file: /courses/21g-505-advanced-japanese-i-fall-2005/edf3ea1d8ab9a8ac5d200cda500
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: Lesson 23A Reading
 uid: edf3ea1d-8ab9-a8ac-5d20-0cda5000c5fe
 ---
 This resource contains the information regarding lesson 23a reading.
-
