--- a/content/resources/mit21g_501f12_hw4_26a.md
+++ b/content/resources/mit21g_501f12_hw4_26a.md
@@ -5,6 +5,7 @@ file: /courses/21g-505-advanced-japanese-i-fall-2005/8bebd055b2ed3756e24a0f31eba
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: Lesson 23A Reading
 uid: 8bebd055-b2ed-3756-e24a-0f31ebaa016c
 ---
 This resource contains the information regarding lesson 23a reading.
-
