--- a/content/resources/21g-505f05-th.md
+++ b/content/resources/21g-505f05-th.md
@@ -3,7 +3,8 @@ content_type: resource
 description: Sanno festival procession at Kojimachi I-chome, 1857. From "One Hundred
   Famous Views of Edo"; Woodblock print, 13 1/4 x 8 5/8 in; The Brooklyn Museum. Photographs
   by Mark Harden and Carol Gerten-Jackson. Image is taken from WebMuseum Web site.
-file: /courses/21g-505-advanced-japanese-i-fall-2005/df899d91cf73360966e9f274dad0b79c_21g-505f05-th.jpg
+file: /ol-ocw-studio-app/courses/21g-505-advanced-japanese-i-fall-2005/df899d91cf73360966e9f274dad0b79c_21g-505f05-th.jpg
+file_size: 10794
 file_type: image/jpeg
 image_metadata:
   caption: Sanno festival procession at Kojimachi I-chome, 1857. From "One Hundred
