--- a/content/resources/21g-505f05.md
+++ b/content/resources/21g-505f05.md
@@ -3,7 +3,8 @@ content_type: resource
 description: Sanno festival procession at Kojimachi I-chome, 1857. From "One Hundred
   Famous Views of Edo"; Woodblock print, 13 1/4 x 8 5/8 in; The Brooklyn Museum. Photographs
   by Mark Harden and Carol Gerten-Jackson. Image is taken from WebMuseum Web site.
-file: /courses/21g-505-advanced-japanese-i-fall-2005/8ec2621ef9da8877043de02bc776bf2a_21g-505f05.jpg
+file: /ol-ocw-studio-app/courses/21g-505-advanced-japanese-i-fall-2005/8ec2621ef9da8877043de02bc776bf2a_21g-505f05.jpg
+file_size: 49280
 file_type: image/jpeg
 image_metadata:
   caption: Sanno festival procession at Kojimachi I-chome, 1857. From "One Hundred
