--- a/content/resources/mit21g_501f12_hw2_24b.md
+++ b/content/resources/mit21g_501f12_hw2_24b.md
@@ -1,7 +1,8 @@
 ---
 content_type: resource
 description: This resource contains the information regarding lesson 23a reading.
-file: /courses/21g-505-advanced-japanese-i-fall-2005/63d86e4ded3f0341c440ba04c1c15efd_MIT21G_501F12_hw2_24b.pdf
+file: /ol-ocw-studio-app/courses/21g-505-advanced-japanese-i-fall-2005/63d86e4ded3f0341c440ba04c1c15efd_MIT21G_501F12_hw2_24b.pdf
+file_size: 644810
 file_type: application/pdf
 learning_resource_types:
 - Assignments
