--- a/content/resources/mit21g_501f12_hw3_25b.md
+++ b/content/resources/mit21g_501f12_hw3_25b.md
@@ -1,7 +1,8 @@
 ---
 content_type: resource
 description: This resource contains the information regarding lesson 23a reading.
-file: /courses/21g-505-advanced-japanese-i-fall-2005/edf3ea1d8ab9a8ac5d200cda5000c5fe_MIT21G_501F12_hw3_25b.pdf
+file: /ol-ocw-studio-app/courses/21g-505-advanced-japanese-i-fall-2005/edf3ea1d8ab9a8ac5d200cda5000c5fe_MIT21G_501F12_hw3_25b.pdf
+file_size: 650467
 file_type: application/pdf
 learning_resource_types:
 - Assignments
