--- a/content/resources/21g-505f05.md
+++ b/content/resources/21g-505f05.md
@@ -9,8 +9,8 @@ file_type: image/jpeg
 image_metadata:
   caption: Sanno festival procession at Kojimachi I-chome, 1857. From "One Hundred
     Famous Views of Edo"; Woodblock print, 13 1/4 x 8 5/8 in; The Brooklyn Museum.
-    (Photographs by Mark Harden and Carol Gerten-Jackson. Image is taken from [WebMuseum](http://www.ibiblio.org/wm/)
-    Web site.)
+    (Photographs by Mark Harden and Carol Gerten-Jackson. Image is taken from {{%
+    resource_link "8837f00e-90dd-48e9-aa38-ccb93155a820" "WebMuseum" %}} Web site.)
   credit: Photographs by Mark Harden and Carol Gerten-Jackson. Image is taken from
     WebMuseum Web site.
   image-alt: A woodblock print of the Sanno festival procession at Kojimachi I-chome,
